lib/WWW/Curl/Symbols.pm6

sub CURLOPT_HTTP_VERSION is export { perl6_curlopt_http_version }
sub perl6_curlopt_ftp_use_epsv returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_USE_EPSV is export { perl6_curlopt_ftp_use_epsv }
sub perl6_curlopt_sslcerttype returns int is native('libperl6_curl') { * }
sub CURLOPT_SSLCERTTYPE is export { perl6_curlopt_sslcerttype }
sub perl6_curlopt_sslkey returns int is native('libperl6_curl') { * }
sub CURLOPT_SSLKEY is export { perl6_curlopt_sslkey }
sub perl6_curlopt_sslkeytype returns int is native('libperl6_curl') { * }
sub CURLOPT_SSLKEYTYPE is export { perl6_curlopt_sslkeytype }
sub perl6_curlopt_sslengine returns int is native('libperl6_curl') { * }
sub CURLOPT_SSLENGINE is export { perl6_curlopt_sslengine }
sub perl6_curlopt_sslengine_default returns int is native('libperl6_curl') { * }
sub CURLOPT_SSLENGINE_DEFAULT is export { perl6_curlopt_sslengine_default }
sub perl6_curlopt_dns_use_global_cache returns int is native('libperl6_curl') { * }
sub CURLOPT_DNS_USE_GLOBAL_CACHE is export { perl6_curlopt_dns_use_global_cache }
sub perl6_curlopt_dns_cache_timeout returns int is native('libperl6_curl') { * }
sub CURLOPT_DNS_CACHE_TIMEOUT is export { perl6_curlopt_dns_cache_timeout }
sub perl6_curlopt_prequote returns int is native('libperl6_curl') { * }
sub CURLOPT_PREQUOTE is export { perl6_curlopt_prequote }
sub perl6_curlopt_debugfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_DEBUGFUNCTION is export { perl6_curlopt_debugfunction }
sub perl6_curlopt_debugdata returns int is native('libperl6_curl') { * }
sub CURLOPT_DEBUGDATA is export { perl6_curlopt_debugdata }
sub perl6_curlopt_cookiesession returns int is native('libperl6_curl') { * }
sub CURLOPT_COOKIESESSION is export { perl6_curlopt_cookiesession }
sub perl6_curlopt_capath returns int is native('libperl6_curl') { * }
sub CURLOPT_CAPATH is export { perl6_curlopt_capath }
sub perl6_curlopt_buffersize returns int is native('libperl6_curl') { * }
sub CURLOPT_BUFFERSIZE is export { perl6_curlopt_buffersize }
sub perl6_curlopt_nosignal returns int is native('libperl6_curl') { * }
sub CURLOPT_NOSIGNAL is export { perl6_curlopt_nosignal }
sub perl6_curlopt_share returns int is native('libperl6_curl') { * }
sub CURLOPT_SHARE is export { perl6_curlopt_share }
sub perl6_curlopt_proxytype returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXYTYPE is export { perl6_curlopt_proxytype }
sub perl6_curlopt_accept_encoding returns int is native('libperl6_curl') { * }
sub CURLOPT_ACCEPT_ENCODING is export { perl6_curlopt_accept_encoding }
sub perl6_curlopt_private returns int is native('libperl6_curl') { * }
sub CURLOPT_PRIVATE is export { perl6_curlopt_private }
sub perl6_curlopt_http200aliases returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTP200ALIASES is export { perl6_curlopt_http200aliases }
sub perl6_curlopt_unrestricted_auth returns int is native('libperl6_curl') { * }
sub CURLOPT_UNRESTRICTED_AUTH is export { perl6_curlopt_unrestricted_auth }
sub perl6_curlopt_ftp_use_eprt returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_USE_EPRT is export { perl6_curlopt_ftp_use_eprt }
sub perl6_curlopt_httpauth returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTPAUTH is export { perl6_curlopt_httpauth }
sub perl6_curlopt_ssl_ctx_function returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_CTX_FUNCTION is export { perl6_curlopt_ssl_ctx_function }
sub perl6_curlopt_ssl_ctx_data returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_CTX_DATA is export { perl6_curlopt_ssl_ctx_data }
sub perl6_curlopt_ftp_create_missing_dirs returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_CREATE_MISSING_DIRS is export { perl6_curlopt_ftp_create_missing_dirs }
sub perl6_curlopt_proxyauth returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXYAUTH is export { perl6_curlopt_proxyauth }
sub perl6_curlopt_ftp_response_timeout returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_RESPONSE_TIMEOUT is export { perl6_curlopt_ftp_response_timeout }
sub perl6_curlopt_ipresolve returns int is native('libperl6_curl') { * }
sub CURLOPT_IPRESOLVE is export { perl6_curlopt_ipresolve }
sub perl6_curlopt_maxfilesize returns int is native('libperl6_curl') { * }
sub CURLOPT_MAXFILESIZE is export { perl6_curlopt_maxfilesize }
sub perl6_curlopt_infilesize_large returns int is native('libperl6_curl') { * }
sub CURLOPT_INFILESIZE_LARGE is export { perl6_curlopt_infilesize_large }
sub perl6_curlopt_resume_from_large returns int is native('libperl6_curl') { * }
sub CURLOPT_RESUME_FROM_LARGE is export { perl6_curlopt_resume_from_large }
sub perl6_curlopt_maxfilesize_large returns int is native('libperl6_curl') { * }
sub CURLOPT_MAXFILESIZE_LARGE is export { perl6_curlopt_maxfilesize_large }
sub perl6_curlopt_netrc_file returns int is native('libperl6_curl') { * }
sub CURLOPT_NETRC_FILE is export { perl6_curlopt_netrc_file }
sub perl6_curlopt_use_ssl returns int is native('libperl6_curl') { * }
sub CURLOPT_USE_SSL is export { perl6_curlopt_use_ssl }
sub perl6_curlopt_postfieldsize_large returns int is native('libperl6_curl') { * }
sub CURLOPT_POSTFIELDSIZE_LARGE is export { perl6_curlopt_postfieldsize_large }
sub perl6_curlopt_tcp_nodelay returns int is native('libperl6_curl') { * }
sub CURLOPT_TCP_NODELAY is export { perl6_curlopt_tcp_nodelay }
sub perl6_curlopt_ftpsslauth returns int is native('libperl6_curl') { * }
sub CURLOPT_FTPSSLAUTH is export { perl6_curlopt_ftpsslauth }
sub perl6_curlopt_ioctlfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_IOCTLFUNCTION is export { perl6_curlopt_ioctlfunction }
sub perl6_curlopt_ioctldata returns int is native('libperl6_curl') { * }
sub CURLOPT_IOCTLDATA is export { perl6_curlopt_ioctldata }
sub perl6_curlopt_ftp_account returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_ACCOUNT is export { perl6_curlopt_ftp_account }
sub perl6_curlopt_cookielist returns int is native('libperl6_curl') { * }
sub CURLOPT_COOKIELIST is export { perl6_curlopt_cookielist }
sub perl6_curlopt_ignore_content_length returns int is native('libperl6_curl') { * }
sub CURLOPT_IGNORE_CONTENT_LENGTH is export { perl6_curlopt_ignore_content_length }
sub perl6_curlopt_ftp_skip_pasv_ip returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_SKIP_PASV_IP is export { perl6_curlopt_ftp_skip_pasv_ip }
sub perl6_curlopt_ftp_filemethod returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_FILEMETHOD is export { perl6_curlopt_ftp_filemethod }
sub perl6_curlopt_localport returns int is native('libperl6_curl') { * }
sub CURLOPT_LOCALPORT is export { perl6_curlopt_localport }
sub perl6_curlopt_localportrange returns int is native('libperl6_curl') { * }
sub CURLOPT_LOCALPORTRANGE is export { perl6_curlopt_localportrange }
sub perl6_curlopt_connect_only returns int is native('libperl6_curl') { * }
sub CURLOPT_CONNECT_ONLY is export { perl6_curlopt_connect_only }
sub perl6_curlopt_conv_from_network_function returns int is native('libperl6_curl') { * }
sub CURLOPT_CONV_FROM_NETWORK_FUNCTION is export { perl6_curlopt_conv_from_network_function }
sub perl6_curlopt_conv_to_network_function returns int is native('libperl6_curl') { * }
sub CURLOPT_CONV_TO_NETWORK_FUNCTION is export { perl6_curlopt_conv_to_network_function }
sub perl6_curlopt_conv_from_utf8_function returns int is native('libperl6_curl') { * }
sub CURLOPT_CONV_FROM_UTF8_FUNCTION is export { perl6_curlopt_conv_from_utf8_function }
sub perl6_curlopt_max_send_speed_large returns int is native('libperl6_curl') { * }
sub CURLOPT_MAX_SEND_SPEED_LARGE is export { perl6_curlopt_max_send_speed_large }
sub perl6_curlopt_max_recv_speed_large returns int is native('libperl6_curl') { * }
sub CURLOPT_MAX_RECV_SPEED_LARGE is export { perl6_curlopt_max_recv_speed_large }
sub perl6_curlopt_ftp_alternative_to_user returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_ALTERNATIVE_TO_USER is export { perl6_curlopt_ftp_alternative_to_user }
sub perl6_curlopt_sockoptfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_SOCKOPTFUNCTION is export { perl6_curlopt_sockoptfunction }
sub perl6_curlopt_sockoptdata returns int is native('libperl6_curl') { * }
sub CURLOPT_SOCKOPTDATA is export { perl6_curlopt_sockoptdata }
sub perl6_curlopt_ssl_sessionid_cache returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_SESSIONID_CACHE is export { perl6_curlopt_ssl_sessionid_cache }
sub perl6_curlopt_ssh_auth_types returns int is native('libperl6_curl') { * }
sub CURLOPT_SSH_AUTH_TYPES is export { perl6_curlopt_ssh_auth_types }
sub perl6_curlopt_ssh_public_keyfile returns int is native('libperl6_curl') { * }
sub CURLOPT_SSH_PUBLIC_KEYFILE is export { perl6_curlopt_ssh_public_keyfile }
sub perl6_curlopt_ssh_private_keyfile returns int is native('libperl6_curl') { * }
sub CURLOPT_SSH_PRIVATE_KEYFILE is export { perl6_curlopt_ssh_private_keyfile }
sub perl6_curlopt_ftp_ssl_ccc returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_SSL_CCC is export { perl6_curlopt_ftp_ssl_ccc }
sub perl6_curlopt_timeout_ms returns int is native('libperl6_curl') { * }
sub CURLOPT_TIMEOUT_MS is export { perl6_curlopt_timeout_ms }
sub perl6_curlopt_connecttimeout_ms returns int is native('libperl6_curl') { * }
sub CURLOPT_CONNECTTIMEOUT_MS is export { perl6_curlopt_connecttimeout_ms }
sub perl6_curlopt_http_transfer_decoding returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTP_TRANSFER_DECODING is export { perl6_curlopt_http_transfer_decoding }
sub perl6_curlopt_http_content_decoding returns int is native('libperl6_curl') { * }
sub CURLOPT_HTTP_CONTENT_DECODING is export { perl6_curlopt_http_content_decoding }
sub perl6_curlopt_new_file_perms returns int is native('libperl6_curl') { * }
sub CURLOPT_NEW_FILE_PERMS is export { perl6_curlopt_new_file_perms }
sub perl6_curlopt_new_directory_perms returns int is native('libperl6_curl') { * }
sub CURLOPT_NEW_DIRECTORY_PERMS is export { perl6_curlopt_new_directory_perms }
sub perl6_curlopt_postredir returns int is native('libperl6_curl') { * }
sub CURLOPT_POSTREDIR is export { perl6_curlopt_postredir }
sub perl6_curlopt_ssh_host_public_key_md5 returns int is native('libperl6_curl') { * }
sub CURLOPT_SSH_HOST_PUBLIC_KEY_MD5 is export { perl6_curlopt_ssh_host_public_key_md5 }
sub perl6_curlopt_opensocketfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_OPENSOCKETFUNCTION is export { perl6_curlopt_opensocketfunction }
sub perl6_curlopt_opensocketdata returns int is native('libperl6_curl') { * }
sub CURLOPT_OPENSOCKETDATA is export { perl6_curlopt_opensocketdata }
sub perl6_curlopt_copypostfields returns int is native('libperl6_curl') { * }
sub CURLOPT_COPYPOSTFIELDS is export { perl6_curlopt_copypostfields }
sub perl6_curlopt_proxy_transfer_mode returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXY_TRANSFER_MODE is export { perl6_curlopt_proxy_transfer_mode }
sub perl6_curlopt_seekfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_SEEKFUNCTION is export { perl6_curlopt_seekfunction }
sub perl6_curlopt_seekdata returns int is native('libperl6_curl') { * }
sub CURLOPT_SEEKDATA is export { perl6_curlopt_seekdata }
sub perl6_curlopt_crlfile returns int is native('libperl6_curl') { * }
sub CURLOPT_CRLFILE is export { perl6_curlopt_crlfile }
sub perl6_curlopt_issuercert returns int is native('libperl6_curl') { * }
sub CURLOPT_ISSUERCERT is export { perl6_curlopt_issuercert }
sub perl6_curlopt_address_scope returns int is native('libperl6_curl') { * }
sub CURLOPT_ADDRESS_SCOPE is export { perl6_curlopt_address_scope }
sub perl6_curlopt_certinfo returns int is native('libperl6_curl') { * }
sub CURLOPT_CERTINFO is export { perl6_curlopt_certinfo }
sub perl6_curlopt_username returns int is native('libperl6_curl') { * }
sub CURLOPT_USERNAME is export { perl6_curlopt_username }
sub perl6_curlopt_password returns int is native('libperl6_curl') { * }
sub CURLOPT_PASSWORD is export { perl6_curlopt_password }
